gcc/testsuite/gdc.test/compilable/version.d
/* REQUIRED_ARGS:
*/

version (D_ModuleInfo)
{ }
else
{
    static assert(0);
}

version (D_Exceptions)
{ }
else
{
    static assert(0);
}

version (D_TypeInfo)
{ }
else
{
    static assert(0);
}