gcc/testsuite/gdc.test/fail_compilation/fail4375w.d
// REQUIRED_ARGS: -w
// 4375: Dangling else

static if (true)
    version (B)
        struct G1 {}
else
    struct G2 {}

